--- a/html/syllabus.html
+++ b/html/syllabus.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Syllabus</title>
 </head>
 
@@ -26,6 +26,7 @@
             <h2>Blockchain and Machine Learning</h2>
             <ul>
                 <li><a href="https://arxiv.org/pdf/1909.06189" class="text-blue-500 hover:text-blue-700">Machine Learning in the Blockchain Era: Review and Outlook</a></li>
+                <li><a href="https://arxiv.org/abs/1911.12942" class="text-blue-500 hover:text-blue-700">When Blockchain Meets AI: Optimal Mining Strategy Achieved By Machine Learning</a></li>
             </ul>
 
             <h3>Fraud Detection and Security</h3>
@@ -44,14 +45,14 @@
                 <li><a href="https://arxiv.org/html/2401.03530v1" class="text-blue-500 hover:text-blue-700">Anomaly Detection in Blockchain Data: An Application to Bitcoin Transactions</a></li>
             </ul>
 
-            <!-- <h3>Predictive Analytics and Market Behavior</h3>
+            <h3>Predictive Analytics and Market Behavior</h3>
             <ul>
-                <li><a href="https://arxiv.org/abs/1903.01836" class="text-blue-500 hover:text-blue-700">Predicting Bitcoin Prices Using Deep Learning Algorithms</a></li>
-                <li><a href="https://arxiv.org/abs/1808.01892" class="text-blue-500 hover:text-blue-700">Machine Learning Techniques for Cryptocurrency Market Analysis</a></li>
-                <li><a href="https://arxiv.org/abs/1812.07136" class="text-blue-500 hover:text-blue-700">Forecasting of Cryptocurrency Prices Using Machine Learning Algorithms</a></li>
+                <li><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10216962/" class="text-blue-500 hover:text-blue-700">Predicting Bitcoin Prices Using Deep Learning Algorithms</a></li>
+                <li><a href="https://www.sciencedirect.com/science/article/pii/S2405918822000174" class="text-blue-500 hover:text-blue-700">Machine Learning Techniques for Cryptocurrency Market Analysis</a></li>
+                <li><a href="https://www.diva-portal.org/smash/get/diva2:1778251/FULLTEXT03" class="text-blue-500 hover:text-blue-700">Forecasting of Cryptocurrency Prices Using Machine Learning Algorithms</a></li>
             </ul>
 
-            <h3>Privacy and Data Management</h>
+            <!-- <h3>Privacy and Data Management</h>
             <ul>
                 <li><a href="https://arxiv.org/abs/1807.05414" class="text-blue-500 hover:text-blue-700">Blockchain and Machine Learning for Secure and Transparent Data Sharing</a></li>
                 <li><a href="https://arxiv.org/abs/1811.08096" class="text-blue-500 hover:text-blue-700">Privacy-Preserving Machine Learning on Blockchain</a></li>
