--- a/html/lecture8.html
+++ b/html/lecture8.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Using Machine Learning to Generate Accounting Entries from Ethereum Transaction Data</title>
 </head>
 
