fix front page image

--- a/html/index.html
+++ b/html/index.html
@@ -78,7 +78,7 @@
     <main class="p-4">
         <section>
             <!-- Images Section -->
-            <img src="../images/models/dog_name_predictor.png" alt="Dog Name Predictor" class="lecture-image">
+            <img src="./dog_name_predictor.png" alt="Dog Name Predictor" class="lecture-image">
 
         </section>
 
