--- a/html/syllabus.html
+++ b/html/syllabus.html
@@ -23,9 +23,11 @@
     <main class="p-4">
         <section>
             <p>This syllabus covers a range of research papers on machine learning and the applications of machine learning to blockchain data. Each topic includes links to relevant research papers.</p>
-            <h2>Blockchain and Machine Learning</h2>
+            <h2>Machines Learning from Blockchain or Financial Data</h2>
             <ul>
+                <li><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4835311" class="text-blue-500 hover:text-blue-700">Financial Statement Analysis with Large Language Models</a></li>
                 <li><a href="https://arxiv.org/pdf/1909.06189" class="text-blue-500 hover:text-blue-700">Machine Learning in the Blockchain Era: Review and Outlook</a></li>
+                
                 <li><a href="https://arxiv.org/abs/1911.12942" class="text-blue-500 hover:text-blue-700">When Blockchain Meets AI: Optimal Mining Strategy Achieved By Machine Learning</a></li>
             </ul>
 
