--- a/html/links.html
+++ b/html/links.html
@@ -33,6 +33,9 @@
                 <li><a href="markmap.html">Deep Learning Mind Map</a> See the relationships among the Deep Learning sub topics.</li>
             </ul>
             <ul>
+                <li><a href="https://www.youtube.com/watch?v=VwVg9jCtqaU">Machine Learning Zero to Hero (Google I/O'19)</a> TensorFlow</li>
+            </ul>
+            <ul>
                 <li><a href="https://www.youtube.com/watch?v=zjkBMFhNj_g&t=1010s">[1hr Talk] Intro to Large Language Models</a> - Andrej Karpathy</li>
             </ul>
             <ul>
