--- a/html/links.html
+++ b/html/links.html
@@ -34,6 +34,8 @@
             </ul>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=VwVg9jCtqaU">Machine Learning Zero to Hero (Google I/O'19)</a> TensorFlow</li>
+                <li><a href="https://colab.research.google.com/github/lmoroney/io19/blob/master/Zero%20to%20Hero/Rock-Paper-Scissors.ipynb">Colab Workbook for Zero to Hero</li>
+                
             </ul>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=zjkBMFhNj_g&t=1010s">[1hr Talk] Intro to Large Language Models</a> - Andrej Karpathy</li>
