--- a/html/syllabus.html
+++ b/html/syllabus.html
@@ -22,65 +22,99 @@
     </header>
     <main class="p-4">
         <section>
-            <p>This syllabus covers a range of research papers on machine learning and the applications of machine learning to blockchain data. Each topic includes links to relevant research papers.</p>
+            <p>This syllabus covers a range of research papers on machine learning and the applications of machine
+                learning to blockchain data. Each topic includes links to relevant research papers.</p>
             <h2>Machines Learning from Blockchain or Financial Data</h2>
             <ul>
-                <li><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4835311" class="text-blue-500 hover:text-blue-700">Financial Statement Analysis with Large Language Models</a></li>
-                <li><a href="https://arxiv.org/pdf/1909.06189" class="text-blue-500 hover:text-blue-700">Machine Learning in the Blockchain Era: Review and Outlook</a></li>
-                
-                <li><a href="https://arxiv.org/abs/1911.12942" class="text-blue-500 hover:text-blue-700">When Blockchain Meets AI: Optimal Mining Strategy Achieved By Machine Learning</a></li>
+                <li><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4835311"
+                        class="text-blue-500 hover:text-blue-700">Financial Statement Analysis with Large Language
+                        Models</a></li>
+                <li><a href="https://arxiv.org/pdf/1909.06189" class="text-blue-500 hover:text-blue-700">Machine
+                        Learning in the Blockchain Era: Review and Outlook</a></li>
+
+                <li><a href="https://arxiv.org/abs/1911.12942" class="text-blue-500 hover:text-blue-700">When Blockchain
+                        Meets AI: Optimal Mining Strategy Achieved By Machine Learning</a></li>
+                <li><a href="https://arxiv.org/html/2403.17081v1" class="text-blue-500 hover:text-blue-700">Machine
+                        Learning on Blockchain Data: A Systematic Mapping Study</a></li>
+
             </ul>
 
             <h3>Fraud Detection and Security</h3>
             <ul>
-                <li><a href="../docs/PDFs/survey.pdf" class="text-blue-500 hover:text-blue-700">Blockchain and Machine Learning for Communications and Networking Systems</a></li>
-                <li><a href="https://arxiv.org/abs/1910.09272" class="text-blue-500 hover:text-blue-700">A Machine Learning-Based Forensic Approach for Real-Time Detection of Crypto Mining Malware</a></li>
+                <li><a href="../docs/PDFs/survey.pdf" class="text-blue-500 hover:text-blue-700">Blockchain and Machine
+                        Learning for Communications and Networking Systems</a></li>
+                <li><a href="https://arxiv.org/abs/1910.09272" class="text-blue-500 hover:text-blue-700">A Machine
+                        Learning-Based Forensic Approach for Real-Time Detection of Crypto Mining Malware</a></li>
             </ul>
 
             <h3>Smart Contracts Analysis</h3>
             <ul>
-                <li><a href="https://www.ijcai.org/Proceedings/2020/0454.pdf" class="text-blue-500 hover:text-blue-700">Detecting Vulnerabilities in Smart Contracts with Neural Networks</a></li>
+                <li><a href="https://www.ijcai.org/Proceedings/2020/0454.pdf"
+                        class="text-blue-500 hover:text-blue-700">Detecting Vulnerabilities in Smart Contracts with
+                        Neural Networks</a></li>
             </ul>
 
             <h3>Anomaly Detection in Blockchain Transactions</h3>
             <ul>
-                <li><a href="https://arxiv.org/html/2401.03530v1" class="text-blue-500 hover:text-blue-700">Anomaly Detection in Blockchain Data: An Application to Bitcoin Transactions</a></li>
+                <li><a href="https://arxiv.org/html/2401.03530v1" class="text-blue-500 hover:text-blue-700">Anomaly
+                        Detection in Blockchain Data: An Application to Bitcoin Transactions</a></li>
             </ul>
 
             <h3>Predictive Analytics and Market Behavior</h3>
             <ul>
-                <li><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10216962/" class="text-blue-500 hover:text-blue-700">Predicting Bitcoin Prices Using Deep Learning Algorithms</a></li>
-                <li><a href="https://www.sciencedirect.com/science/article/pii/S2405918822000174" class="text-blue-500 hover:text-blue-700">Machine Learning Techniques for Cryptocurrency Market Analysis</a></li>
-                <li><a href="https://www.diva-portal.org/smash/get/diva2:1778251/FULLTEXT03" class="text-blue-500 hover:text-blue-700">Forecasting of Cryptocurrency Prices Using Machine Learning Algorithms</a></li>
+                <li><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10216962/"
+                        class="text-blue-500 hover:text-blue-700">Predicting Bitcoin Prices Using Deep Learning
+                        Algorithms</a></li>
+                <li><a href="https://www.sciencedirect.com/science/article/pii/S2405918822000174"
+                        class="text-blue-500 hover:text-blue-700">Machine Learning Techniques for Cryptocurrency Market
+                        Analysis</a></li>
+                <li><a href="https://www.diva-portal.org/smash/get/diva2:1778251/FULLTEXT03"
+                        class="text-blue-500 hover:text-blue-700">Forecasting of Cryptocurrency Prices Using Machine
+                        Learning Algorithms</a></li>
             </ul>
+            <img src="../images/models/graphic-for-syllabus.jpg" alt="Perceptron" class="section-image">
+            <h3>Privacy and Data Management</h3>
+                <ul>
+                    <li><a href="https://www.sciencedirect.com/science/article/pii/S209672092400006X"
+                            class="text-blue-500 hover:text-blue-700">Blockchain for secure and decentralized artificial
+                            intelligence in cybersecurity: A comprehensive review</a></li>
+                    <li><a href="https://ieeexplore.ieee.org/document/8827509"
+                            class="text-blue-500 hover:text-blue-700">Privacy-Preserving Machine Learning on
+                            Blockchain</a></li>
+                    <li><a href="https://arxiv.org/html/2401.03552v1" class="text-blue-500 hover:text-blue-700">Towards
+                            Federated Learning on Blockchain: A Secure and Privacy-Preserving Data Mining
+                            Architecture</a></li>
+                </ul>
 
-            <!-- <h3>Privacy and Data Management</h>
+                <h>Blockchain Scalability and Optimization
+            </h3>
             <ul>
-                <li><a href="https://arxiv.org/abs/1807.05414" class="text-blue-500 hover:text-blue-700">Blockchain and Machine Learning for Secure and Transparent Data Sharing</a></li>
-                <li><a href="https://arxiv.org/abs/1811.08096" class="text-blue-500 hover:text-blue-700">Privacy-Preserving Machine Learning on Blockchain</a></li>
-                <li><a href="https://arxiv.org/abs/1902.01046" class="text-blue-500 hover:text-blue-700">Towards Federated Learning on Blockchain: A Secure and Privacy-Preserving Data Mining Architecture</a></li>
-            </ul>
-
-            <h>Blockchain Scalability and Optimization</h3>
-            <ul>
-                <li><a href="https://arxiv.org/abs/1907.07670" class="text-blue-500 hover:text-blue-700">Machine Learning for Blockchain Consensus</a></li>
-                <li><a href="https://arxiv.org/abs/1807.02072" class="text-blue-500 hover:text-blue-700">Optimizing Blockchain Performance: Machine Learning Approaches</a></li>
-                <li><a href="https://arxiv.org/abs/1903.02139" class="text-blue-500 hover:text-blue-700">Survey of Machine Learning for Blockchain Data Analysis</a></li>
+                <li><a href="https://ieeexplore.ieee.org/document/8783030"
+                        class="text-blue-500 hover:text-blue-700">Machine
+                        Learning for Blockchain Consensus</a></li>
+                <li><a href="https://arxiv.org/abs/2309.11205" class="text-blue-500 hover:text-blue-700">A Model-Based
+                        Machine Learning Approach for Assessing the Performance of Blockchain Applications</a></li>
+                <li><a href="https://arxiv.org/html/2404.18251v1"" class=" text-blue-500 hover:text-blue-700">Machine
+                        Learning for Blockchain Data Analysis: Progress and Opportunities</a></li>
             </ul>
 
             <h3>Case Studies and Applications</h3>
             <ul>
-                <li><a href="https://arxiv.org/abs/1905.01413" class="text-blue-500 hover:text-blue-700">Case Study: Blockchain and Machine Learning for Supply Chain Management</a></li>
-                <li><a href="https://arxiv.org/abs/1905.04150" class="text-blue-500 hover:text-blue-700">Applications of Blockchain and Machine Learning in Healthcare</a></li>
-                <li><a href="https://arxiv.org/abs/1904.05686" class="text-blue-500 hover:text-blue-700">Smart City Applications of Blockchain and Machine Learning</a></li>
+                <li><a href="https://www.researchgate.net/publication/370387306_A_Case_Study_of_How_Maersk_Adopts_Cloud-Based_Blockchain_Integrated_with_Machine_Learning_for_Sustainable_Practices"
+                        class="text-blue-500 hover:text-blue-700">Case Study:
+                        A Case Study of How Maersk Adopts Cloud-Based BlockchainIntegrated with Machine Learning for
+                        Sustainable Practices</a></li>
             </ul>
 
             <h3>Future Directions and Emerging Trends</h3>
             <ul>
-                <li><a href="https://arxiv.org/abs/1904.08335" class="text-blue-500 hover:text-blue-700">Emerging Trends in Blockchain and Machine Learning: A Research Agenda</a></li>
-                <li><a href="https://arxiv.org/abs/1906.08982" class="text-blue-500 hover:text-blue-700">Future Directions for Blockchain and Machine Learning Integration</a></li>
-                <li><a href="https://arxiv.org/abs/1908.05014" class="text-blue-500 hover:text-blue-700">Research Challenges and Opportunities in Blockchain and Machine Learning</a></li>
-            </ul> -->
+                <li><a href="https://arxiv.org/abs/1904.08335" class="text-blue-500 hover:text-blue-700">Emerging Trends
+                        in Blockchain and Machine Learning: A Research Agenda</a></li>
+                <li><a href="https://arxiv.org/abs/1906.08982" class="text-blue-500 hover:text-blue-700">Future
+                        Directions for Blockchain and Machine Learning Integration</a></li>
+                <li><a href="https://arxiv.org/abs/1908.05014" class="text-blue-500 hover:text-blue-700">Research
+                        Challenges and Opportunities in Blockchain and Machine Learning</a></li>
+            </ul> 
         </section>
     </main>
     <footer>
