--- a/html/syllabus.html
+++ b/html/syllabus.html
@@ -24,7 +24,7 @@
         <section>
             <p>This syllabus covers a range of research papers on machine learning and the applications of machine
                 learning to blockchain data. This chart shows the proportion of published articles for each topic.</p>
-            <img src="../images/graphs/syllabus_distribution.png" alt="Syllabus Distribution" class="section-image">
+            <img src="./syllabus_distribution.png" alt="Syllabus Distribution" class="section-image">
 
             <h2>Supervised Learning</h2>
             <ul>
@@ -93,7 +93,7 @@
                         Neural Networks</a></li>
             </ul>
 
-            <img src="../images/models/graphic-for-syllabus.jpg" alt="Perceptron" class="section-image">
+            <img src="./graphic-for-syllabus.jpg" alt="Perceptron" class="section-image">
 
             <h2>Other Use Cases</h2>
             <ul>
