--- a/html/lecture4.html
+++ b/html/lecture4.html
@@ -92,7 +92,7 @@
                 or longer-range dependencies, more sophisticated approaches may be required.</p>
         </section>
         <div class="images-section">
-            <img src="../images/misc/thenextdogname.png" alt="AI imagined graph 2" class="lecture-image">
+            <img src=".//thenextdogname.png" alt="AI imagined graph 2" class="lecture-image">
         </div>
         <section>
             <h1>Dog Name Generator Using Bigrams</h1>
