--- a/html/perceptron.html
+++ b/html/perceptron.html
@@ -73,16 +73,16 @@
         <section>
             <h2>Introduction to Perceptrons</h2>
             <p>Perceptrons are the simplest type of artificial neural network, often used as a stepping stone to understand more complex network structures. This section delves into the perceptron's basics, its architecture, and its role as a linear classifier.</p>
-            <img src="images/perceptron.png" alt="Perceptron Architecture">
+            <img src="./perceptron.png" alt="Perceptron Architecture">
 
             <h3>Architecture of a Perceptron</h3>
             <p>The perceptron consists of input nodes (or neurons) connected to a single output node via weighted edges. The output node applies an activation function to the weighted sum of the inputs to produce the output.</p>
 
-            <img src="images/perceptron2.png" alt="Perceptron Training Process">
+            <img src="./perceptron2.png" alt="Perceptron Training Process">
             <h3>Training a Perceptron</h3>
             <p>Training a perceptron involves adjusting the weights based on the errors made by the model during the training process. This is typically done using the perceptron learning rule, which is a type of online learning.</p>
 
-            <img src="images/perceptron3.png" alt="Perceptron Example">
+            <img src="./perceptron3.png" alt="Perceptron Example">
             <h3>Example Applications of Perceptrons</h3>
             <section>
                 <h2>Perceptrons for Binary Classification</h2>
