--- a/html/lecture7.html
+++ b/html/lecture7.html
@@ -26,7 +26,7 @@
     </header>
     <main class="p-4">
         <div class="flex flex-col items-center">
-            <img src="../images/graphs/transformer-architecture.png" alt="Transformer Architecture Diagram" class="w-full md:w-1/2">
+            <img src="./transformer-architecture.png" alt="Transformer Architecture Diagram" class="w-full md:w-1/2">
             <div class="mt-4">
                 <h2 class="text-xl font-bold">Transformer Model Architecture</h2>
                 <p class="mt-2">This diagram represents the architecture of a Transformer model, which is a type of deep learning model commonly used for natural language processing tasks. Here is a detailed description of each step:</p>
