--- a/html/perceptron.html
+++ b/html/perceptron.html
@@ -61,10 +61,16 @@
 <body>
     <header class="bg-gray-800 text-white p-4">
         <nav>
-            <ul class="flex space-x-4">
+            <ul class="bg-gray-800 text-white p-4 flex space-x-4">
                 <li><a href="index.html" class="text-blue-400">Home</a></li>
-                <li><a href="perceptron.html" class="text-blue-400">Perceptron</a></li>
-                <li><a href="applications.html" class="text-blue-400">Applications</a></li>
+                <li><a href="lecture1.html" class="text-blue-400">1</a></li>
+                <li><a href="lecture2.html" class="text-blue-400">2</a></li>
+                <li><a href="lecture3.html" class="text-blue-400">3</a></li>
+                <li><a href="lecture4.html" class="text-blue-400">4</a></li>
+                <li><a href="lecture5.html" class="text-blue-400">5</a></li>
+                <li><a href="lecture6.html" class="text-blue-400">6</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">7</a></li>
+                <li><a href="lecture8.html" class="text-blue-400">8</a></li>
             </ul>
         </nav>
         <h1>Understanding the Perceptron</h1>
@@ -149,6 +155,18 @@
         </section>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
+        <nav>
+            <ul class="flex space-x-4">
+                <li><a href="index.html" class="text-blue-400">Home</a></li>
+                <li><a href="lecture1.html" class="text-blue-400">1</a></li>
+                <li><a href="lecture2.html" class="text-blue-400">2</a></li>
+                <li><a href="lecture3.html" class="text-blue-400">3</a></li>
+                <li><a href="lecture4.html" class="text-blue-400">4</a></li>
+                <li><a href="lecture5.html" class="text-blue-400">5</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">7</a></li>
+                <li><a href="lecture8.html" class="text-blue-400">8</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 
