--- a/html/lecture5.html
+++ b/html/lecture5.html
@@ -37,7 +37,7 @@
             <h3>Diagram of the Simple Neural Net</h3>
             <section>
                 <!-- Images Section -->
-                <img src="../images/models/simple-neural-net.png" alt="Simple Neural Net" class="lecture-image">
+                <img src="./simple-neural-net.png" alt="Simple Neural Net" class="lecture-image">
                 <p> The input layer has 4 features, there is one hidden layer, and the output layer responds to a unique
                     result.</p>
             </section>
