--- a/html/curve-fitting.html
+++ b/html/curve-fitting.html
@@ -52,7 +52,7 @@
                 <li><strong>Non-linearity:</strong> Can model non-linear relationships through multiple layers and non-linear activation functions.</li>
             </ul>
 
-            <img src="../images/models/neural-networks-curve-fitting.png" alt="Neural Networks Curve Fitting" class="section-image">
+            <img src="./neural-networks-curve-fitting.png" alt="Neural Networks Curve Fitting" class="section-image">
 
             <h3>Example: Neural Network Curve Fitting</h3>
             <p>A neural network can be trained to fit a complex curve by adjusting its weights using backpropagation and gradient descent. This process involves feeding the network input data, computing the output, calculating the error, and iteratively adjusting the weights to minimize the error.</p>
@@ -70,7 +70,7 @@
                 \]
             </p>
             <p>where \( f^{(n)}(a) \) is the \( n \)-th derivative of \( f \) at \( a \), and \( n! \) is the factorial of \( n \).</p>
-            <img src="../images/formulas/taylor-series.png" alt="Taylor Series Formula" class="section-image">
+            <img src="./taylor-series.png" alt="Taylor Series Formula" class="section-image">
 
             <h3>Comparison</h3>
             <ul>
@@ -86,7 +86,7 @@
                 <li><strong>Taylor Series:</strong> Approximates \( \sin(x) \) around 0 as \( x - \frac{x^3}{6} + \frac{x^5}{120} - \cdots \)</li>
                 <li><strong>Neural Network:</strong> Trains on data points of \( \sin(x) \) to learn the underlying function without explicitly defining the polynomial terms.</li>
             </ul>
-            <img src="../images/models/taylor-vs-neural-network.png" alt="Taylor Series vs Neural Network" class="section-image">
+            <img src="./taylor-vs-neural-network.png" alt="Taylor Series vs Neural Network" class="section-image">
         </section>
     </main>
 
