add statistical learning link

--- a/html/syllabus.html
+++ b/html/syllabus.html
@@ -23,7 +23,11 @@
     <main class="p-4">
         <section>
             <p>This syllabus covers a range of research papers on machine learning and the applications of machine
-                learning to blockchain data. This chart shows the proportion of published articles for each topic.</p>
+                learning to blockchain data. This chart shows the proportion of published articles for each topic. For a
+                survey of Blockchain Data use, see
+                <a href="blockchain-data-in-ML.html" class="text-blue-500 hover:text-blue-700">Survey on Blockchain Data
+                    in Machine Learning</a>
+            </p>
             <img src="./syllabus_distribution.png" alt="Syllabus Distribution" class="section-image">
 
             <h2>Supervised Learning</h2>
