--- a/html/links.html
+++ b/html/links.html
@@ -34,6 +34,7 @@
             </ul>
             <ul>
                 <li><a href="https://hastie.su.domains/ISLP/ISLP_website.pdf.download.html">An Introduction to Statistical Learning</a></li>
+                <li><a href="https://hastie.su.domains/ISLP/ISLP_website.pdf.download.html">E2EML 193. How Neural Networks Work</a></li>
                 <li><a href="https://www.youtube.com/watch?v=VwVg9jCtqaU">Machine Learning Zero to Hero (Google I/O'19)</a> TensorFlow</li>
                 <li><a href="https://colab.research.google.com/github/lmoroney/io19/blob/master/Zero%20to%20Hero/Rock-Paper-Scissors.ipynb">Colab Workbook for Zero to Hero</li>
                 
