--- a/html/links.html
+++ b/html/links.html
@@ -22,44 +22,72 @@
     <main class="p-4">
         <section>
             <h2 class="text-xl font-bold">Links</h2>
-            <p>If you have any questions or need further information about our exploration series, please don't hesitate to reach out.</p>
+            <p>If you have any questions or need further information about our exploration series, please don't hesitate
+                to reach out.</p>
         </section>
         <section class="additional-materials">
             <h1>Additional Materials</h1>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=2IK3DFHRFfw">Generative AI in a Nutshell - how to survive and thrive in the age of AI</a> - Basically a full day AI course crammed into 18 mins of drawing & talking. Target audience: Everyone.</li>
+                <li><a href="https://www.youtube.com/watch?v=2IK3DFHRFfw">Generative AI in a Nutshell - how to survive
+                        and thrive in the age of AI</a> - Basically a full day AI course crammed into 18 mins of drawing
+                    & talking. Target audience: Everyone.</li>
             </ul>
             <ul>
-                <li><a href="markmap.html">Deep Learning Mind Map</a> See the relationships among the Deep Learning sub topics.</li>
+                <li><a href="markmap.html">Deep Learning Mind Map</a> See the relationships among the Deep Learning sub
+                    topics.</li>
             </ul>
             <ul>
-                <li><a href="https://hastie.su.domains/ISLP/ISLP_website.pdf.download.html">An Introduction to Statistical Learning</a></li>
-                <li><a href="https://hastie.su.domains/ISLP/ISLP_website.pdf.download.html">E2EML 193. How Neural Networks Work</a></li>
-                <li><a href="https://www.youtube.com/watch?v=VwVg9jCtqaU">Machine Learning Zero to Hero (Google I/O'19)</a> TensorFlow</li>
-                <li><a href="https://colab.research.google.com/github/lmoroney/io19/blob/master/Zero%20to%20Hero/Rock-Paper-Scissors.ipynb">Colab Workbook for Zero to Hero</li>
-                
+                <li><a href="https://hastie.su.domains/ISLP/ISLP_website.pdf.download.html">An Introduction to
+                        Statistical Learning</a></li>
+                <li><a href="https://hastie.su.domains/ISLP/ISLP_website.pdf.download.html">E2EML 193. How Neural
+                        Networks Work</a></li>
+                <li><a href="https://www.youtube.com/watch?v=VwVg9jCtqaU">Machine Learning Zero to Hero (Google
+                        I/O'19)</a> TensorFlow</li>
+                <li><a
+                        href="https://colab.research.google.com/github/lmoroney/io19/blob/master/Zero%20to%20Hero/Rock-Paper-Scissors.ipynb">Colab
+                        Workbook for Zero to Hero</li>
+
             </ul>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=zjkBMFhNj_g&t=1010s">[1hr Talk] Intro to Large Language Models</a> - Andrej Karpathy</li>
+                <li><a href="https://www.youtube.com/watch?v=zjkBMFhNj_g&t=1010s">[1hr Talk] Intro to Large Language
+                        Models</a> - Andrej Karpathy</li>
             </ul>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=TkwXa7Cvfr8">Watching Neural Networks Learn</a></li>
             </ul>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=rURRYI66E54">AI Language Models & Transformers - Computerphile</a> - Presentation of GPT-2 and the Attention/Transformer mechanism from 2019</li>
+                <li><a href="https://www.youtube.com/watch?v=rURRYI66E54">AI Language Models & Transformers -
+                        Computerphile</a> - Presentation of GPT-2 and the Attention/Transformer mechanism from 2019</li>
             </ul>
             <ul>
-                <li><a href="https://medium.com/technology-invention-and-more/how-to-build-a-simple-neural-network-in-9-lines-of-python-code-cc8f23647ca1">How to build a simple neural network in 9 lines of Python code</a> - Milo Spencer-Harper</li>
+                <li><a
+                        href="https://medium.com/technology-invention-and-more/how-to-build-a-simple-neural-network-in-9-lines-of-python-code-cc8f23647ca1">How
+                        to build a simple neural network in 9 lines of Python code</a> - Milo Spencer-Harper</li>
             </ul>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=iqmjzecbJHE">Original transformer paper "Attention is all you need" introduced by a layman</a> - Shawn's ML Notes</li>
+                <li><a href="https://www.youtube.com/watch?v=iqmjzecbJHE">Original transformer paper "Attention is all
+                        you need" introduced by a layman</a> - Shawn's ML Notes</li>
             </ul>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=4Bdc55j80l8">Illustrated Guide to Transformers Neural Network: A step by step explanation</a></li>
+                <li><a href="https://www.youtube.com/watch?v=4Bdc55j80l8">Illustrated Guide to Transformers Neural
+                        Network: A step by step explanation</a></li>
             </ul>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=ySus5ZS0b94">OpenAI Embeddings and Vector Databases Crash Course</a></li>
+                <li><a href="https://www.youtube.com/watch?v=ySus5ZS0b94">OpenAI Embeddings and Vector Databases Crash
+                        Course</a></li>
             </ul>
+        </section>
+        <section class="additional-materials">
+            <h1>Back Propagation</h1>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=SmZmBKc7Lrs">Video - The Most Important Algorithm in
+                        Machine Learning</a></li>
+                <li><a href="https://papers.baulab.info/papers/also/Linnainmaa-1976.pdf">PDF - Taylor expansion of the
+                        accumulated rounding error</a></li>
+                <li><a href="https://gwern.net/doc/ai/nn/1986-rumelhart-2.pdf">PDF - Learning representations by
+                        backpropagating errors</a></li>
+            </ul>
+
         </section>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
