--- a/html/links.html
+++ b/html/links.html
@@ -56,6 +56,9 @@
                 <li><a href="https://www.youtube.com/watch?v=TkwXa7Cvfr8">Watching Neural Networks Learn</a></li>
             </ul>
             <ul>
+                <li><a href="https://www.youtube.com/watch?v=Ixl3nykKG9M">The Complete Mathematics of Neural Networks and Deep Learning</a></li>
+            </ul>
+            <ul>
                 <li><a href="https://www.youtube.com/watch?v=rURRYI66E54">AI Language Models & Transformers -
                         Computerphile</a> - Presentation of GPT-2 and the Attention/Transformer mechanism from 2019</li>
             </ul>
