--- a/html/lecture3.html
+++ b/html/lecture3.html
@@ -93,7 +93,7 @@
                     </ul>
                     
                 </li>
-                <p></p>
+                <p><a href="convolutional-neural-networks.html" text-blue-400">Convolutional Neural Networks</a></p>
                 <li><strong>2017</strong> - Transformers Revolution:
                     <ul>
                         <li>2017: The paper "Attention Is All You Need" by Vaswani et al. is published, introducing the
