--- a/html/convolutional-neural-networks.html
+++ b/html/convolutional-neural-networks.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Curve Fitting and Neural Networks</title>
+    <title>Convolutional Neural Networks</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
@@ -25,7 +25,7 @@
                 <li><a href="lecture8.html" class="text-blue-400">8</a></li>
             </ul>
         </nav>
-        <h1>Curve Fitting and Neural Networks</h1>
+        <h1>Convolutional Neural Networks</h1>
     </header>
 
     <main class="p-4">
