--- a/html/contact.html
+++ b/html/contact.html
@@ -15,6 +15,7 @@
             <ul class="flex space-x-4">
                 <li><a href="index.html" class="text-blue-400">Home</a></li>
                 <li><a href="schedule.html" class="text-blue-400">Schedule</a></li>
+                <li><a href="links.html" class="text-blue-400">Links</a></li>
             </ul>
         </nav>
         <h1>Contact</h1>
