--- a/html/links.html
+++ b/html/links.html
@@ -56,9 +56,6 @@
                 <li><a href="https://www.youtube.com/watch?v=TkwXa7Cvfr8">Watching Neural Networks Learn</a></li>
             </ul>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=Ixl3nykKG9M">The Complete Mathematics of Neural Networks and Deep Learning</a></li>
-            </ul>
-            <ul>
                 <li><a href="https://www.youtube.com/watch?v=rURRYI66E54">AI Language Models & Transformers -
                         Computerphile</a> - Presentation of GPT-2 and the Attention/Transformer mechanism from 2019</li>
             </ul>
@@ -81,7 +78,7 @@
             </ul>
         </section>
         <section class="additional-materials">
-            <h1>Back Propagation</h1>
+            <h2>Back Propagation</h2>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=SmZmBKc7Lrs">Video - The Most Important Algorithm in
                         Machine Learning</a></li>
@@ -92,6 +89,20 @@
             </ul>
 
         </section>
+        <section class="additional-materials"></section>
+        <h1>Math for Machine Learning</h1>
+        
+        <ul>
+            <li><a href="https://arxiv.org/abs/1802.01528">The Matrix Calculus You Need For Deep Learning</a></li>
+        </ul>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=pQ5HT8LylZs">Video for "The Matrix Calculus You Need For Deep Learning"</a></li>
+        </ul>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=Ixl3nykKG9M">The Complete Mathematics of Neural Networks and Deep Learning</a></li>
+        </ul>
+        <img src="./machine-learning-math.png" alt="Machine Learning Math">
+    </section>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
     </footer>
