--- a/html/links.html
+++ b/html/links.html
@@ -89,9 +89,8 @@
             </ul>
 
         </section>
-        <section class="additional-materials"></section>
-        <h1>Math for Machine Learning</h1>
-        
+        <section class="additional-materials">
+        <h2>Math for Machine Learning</h2>
         <ul>
             <li><a href="https://arxiv.org/abs/1802.01528">The Matrix Calculus You Need For Deep Learning</a></li>
         </ul>
@@ -101,7 +100,7 @@
         <ul>
             <li><a href="https://www.youtube.com/watch?v=Ixl3nykKG9M">The Complete Mathematics of Neural Networks and Deep Learning</a></li>
         </ul>
-        <img src="./machine-learning-math.png" alt="Machine Learning Math">
+        <img src="./machine-learning-math.png" alt="Machine Learning Math" class="section-image">
     </section>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
