--- a/html/links.html
+++ b/html/links.html
@@ -82,26 +82,31 @@
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=SmZmBKc7Lrs">Video - The Most Important Algorithm in
                         Machine Learning</a></li>
-                <li><a href="https://papers.baulab.info/papers/also/Linnainmaa-1976.pdf">PDF - Taylor expansion of the
-                        accumulated rounding error</a></li>
-                <li><a href="https://gwern.net/doc/ai/nn/1986-rumelhart-2.pdf">PDF - Learning representations by
-                        backpropagating errors</a></li>
-            </ul>
-
+                <ul>
+                    <li><a href="https://papers.baulab.info/papers/also/Linnainmaa-1976.pdf">PDF - Taylor expansion of
+                            the
+                            accumulated rounding error</a></li>
+                </ul>
+                <ul>
+                    <li><a href="https://gwern.net/doc/ai/nn/1986-rumelhart-2.pdf">PDF - Learning representations by
+                            backpropagating errors</a></li>
+                </ul>
         </section>
         <section class="additional-materials">
-        <h2>Math for Machine Learning</h2>
-        <ul>
-            <li><a href="https://arxiv.org/abs/1802.01528">The Matrix Calculus You Need For Deep Learning</a></li>
-        </ul>
-        <ul>
-            <li><a href="https://www.youtube.com/watch?v=pQ5HT8LylZs">Video for "The Matrix Calculus You Need For Deep Learning"</a></li>
-        </ul>
-        <ul>
-            <li><a href="https://www.youtube.com/watch?v=Ixl3nykKG9M">The Complete Mathematics of Neural Networks and Deep Learning</a></li>
-        </ul>
-        <img src="./machine-learning-math.png" alt="Machine Learning Math" class="section-image">
-    </section>
+            <h2>Math for Machine Learning</h2>
+            <ul>
+                <li><a href="https://arxiv.org/abs/1802.01528">The Matrix Calculus You Need For Deep Learning</a></li>
+            </ul>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=pQ5HT8LylZs">Video for "The Matrix Calculus You Need For
+                        Deep Learning"</a></li>
+            </ul>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=Ixl3nykKG9M">The Complete Mathematics of Neural Networks
+                        and Deep Learning</a></li>
+            </ul>
+            <img src="./machine-learning-math.png" alt="Machine Learning Math" class="section-image">
+        </section>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
     </footer>
