--- a/html/links.html
+++ b/html/links.html
@@ -39,10 +39,16 @@
             <ul>
                 <li><a href="https://hastie.su.domains/ISLP/ISLP_website.pdf.download.html">An Introduction to
                         Statistical Learning</a></li>
+            </ul>
+            <ul>
                 <li><a href="https://hastie.su.domains/ISLP/ISLP_website.pdf.download.html">E2EML 193. How Neural
                         Networks Work</a></li>
+            </ul>
+            <ul>
                 <li><a href="https://www.youtube.com/watch?v=VwVg9jCtqaU">Machine Learning Zero to Hero (Google
                         I/O'19)</a> TensorFlow</li>
+            </ul>
+            <ul>
                 <li><a
                         href="https://colab.research.google.com/github/lmoroney/io19/blob/master/Zero%20to%20Hero/Rock-Paper-Scissors.ipynb">Colab
                         Workbook for Zero to Hero</li>
@@ -57,7 +63,8 @@
             </ul>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=rURRYI66E54">AI Language Models & Transformers -
-                        Computerphile</a> - Presentation of GPT-2 and the Attention/Transformer mechanism from 2019</li>
+                        Computerphile</a> - Presentation of GPT-2 and the Attention/Transformer mechanism from 2019
+                </li>
             </ul>
             <ul>
                 <li><a
@@ -65,7 +72,8 @@
                         to build a simple neural network in 9 lines of Python code</a> - Milo Spencer-Harper</li>
             </ul>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=iqmjzecbJHE">Original transformer paper "Attention is all
+                <li><a href="https://www.youtube.com/watch?v=iqmjzecbJHE">Original transformer paper "Attention is
+                        all
                         you need" introduced by a layman</a> - Shawn's ML Notes</li>
             </ul>
             <ul>
@@ -73,7 +81,8 @@
                         Network: A step by step explanation</a></li>
             </ul>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=ySus5ZS0b94">OpenAI Embeddings and Vector Databases Crash
+                <li><a href="https://www.youtube.com/watch?v=ySus5ZS0b94">OpenAI Embeddings and Vector Databases
+                        Crash
                         Course</a></li>
             </ul>
         </section>
